# one_pager

./: README.md  pyproject.toml  report.md
src/one_pager/: crew.py  main.py
src/one_pager/config/: agents.yaml  tasks.yaml
