[project]
name = "one_pager"
version = "0.1.0"
description = "one_pager using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
one_pager = "one_pager.main:run"
run_crew = "one_pager.main:run"
train = "one_pager.main:train"
replay = "one_pager.main:replay"
test = "one_pager.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
